<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_subjectChange"
        android:orderInCategory="100"
        android:title="@string/subjectChange"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_passwordChange"
        android:orderInCategory="100"
        android:title="@string/passwordChange"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/test"
        android:orderInCategory="100"
        android:title="清除浏览记录"
        app:showAsAction="never" />
</menu>